sound toggle visible on firefox. cleaned up commented code for loading assets bug.

--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,7 @@ canvas { border: 1px solid; background: white; margin-top: 50px; display: block;
 code { font-weight: bold; font-size: 15px; color: #33FF33;}
 
 body {
-  font: 13px verdana;
+  font: bold 12pt Menu Text;
   text-align: left;
   color: #eeeeee; 
   padding: 0px; margin: 0px; 
